# inpg

./: .gitignore  CMakeLists.txt  README.md  Zmiany w gałezi master.txt  catalogue.hpp  complex-1.cpp  complex.hpp  kolejny plik.txt  matlab.hpp  pls.txt  test.txt  test_vector.cpp  test_vehicles.cpp  vehicles.cpp
